--- a/guides/getting-started/primer.mdx
+++ b/guides/getting-started/primer.mdx
@@ -1,230 +1,255 @@
 ---
-title: "GoogleTest Primer"
-description: "A hands-on introduction to writing unit tests in C++ using GoogleTest and GoogleMock. Covers creating test cases, assertions, and running tests for your first project."
+title: "GoogleTest Primer: Your First Unit Tests"
+description: "A beginner-friendly guide introducing key concepts: test cases, test fixtures, assertions, and running test suites. Walks through the workflow of writing and executing first tests using GoogleTest."
 ---
 
-# GoogleTest Primer
+# GoogleTest Primer: Your First Unit Tests
 
 ## Introduction
 
-Welcome to your first hands-on guide to writing unit tests in C++ with GoogleTest and GoogleMock. This primer is designed to get you quickly up to speed in creating test cases, writing assertions, and running tests for your initial project. By the end of this guide, you will have successfully written and run your first test suite and gained insight into GoogleTest's testing capabilities.
+Welcome to GoogleTest Primer, your beginner-friendly guide to writing and running your first unit tests using GoogleTest. This guide walks you through essential concepts—test cases, test fixtures, assertions—and shows you the step-by-step workflow to create and execute tests effectively.
 
-## What You Will Learn
-
-- How to write a basic GoogleTest test case
-- Organizing tests with fixtures
-- Using GoogleMock to create mock objects
-- Running tests and interpreting the output
+Whether you are new to testing or just new to GoogleTest, this primer will set you up to start verifying your code with confidence.
 
 ---
 
-## Prerequisites
+## 1. Understanding the Basics
 
-Before getting started, ensure:
+### What This Guide Helps You Accomplish
 
-- You have a working C++ development environment with C++17 support.
-- GoogleTest and GoogleMock are installed and integrated into your build system.
-- Basic understanding of C++ programming.
+This guide empowers you to:
+- Write simple, clear unit tests using GoogleTest macros.
+- Use test fixtures to share common setup among multiple tests.
+- Apply assertions to verify expected behavior.
+- Run your tests and interpret results.
 
-If you haven’t set up yet, consult the [Prerequisites & System Requirements](../getting-started/setup-basics/prerequisites-requirements.md) and [Installation](../getting-started/setup-basics/installation-platforms.md) guides.
+### Prerequisites
+
+Before you start:
+- Ensure GoogleTest is installed and configured in your development environment. Refer to the [Installation Guide](../getting-started/setup-and-installation/installation-guide).
+- Have a C++ project with at least one class or function to test.
+- Basic understanding of C++ syntax and function declarations.
+
+### Expected Outcome
+
+By the end of this guide, you will have written several unit tests that run successfully, demonstrating core GoogleTest capabilities.
+
+### Time Estimate
+
+15–30 minutes for writing and running your first test suite.
+
+### Difficulty Level
+
+Beginner
 
 ---
 
-## Writing Your First Test
+## 2. Writing Your First Test Case
 
-### Step 1: Include GoogleTest Headers
+Tests in GoogleTest are defined with the `TEST` macro. Each test has two identifiers:
+- **Test Suite Name**: groups related tests logically.
+- **Test Name**: identifies the specific test.
 
-Start by including the GoogleTest header in your test source file.
+### Simple Test Example
 
 ```cpp
 #include <gtest/gtest.h>
-```
 
-### Step 2: Write a Basic Test Case
-
-A test case consists of the `TEST` macro, which defines test name and test code blocks. Here’s a simple example that tests a simple function:
-
-```cpp
-// Function to be tested
-int Add(int x, int y) {
-  return x + y;
+// Function to test
+int Factorial(int n) {
+  if (n <= 1) return 1;
+  return n * Factorial(n - 1);
 }
 
 // Test case
-TEST(AdditionTest, SimpleAdd) {
-  EXPECT_EQ(Add(1, 2), 3);  // Asserts that Add(1, 2) == 3
-  EXPECT_NE(Add(1, 2), 4);  // Asserts inequality
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-### Expected Results
+### How It Works
+- `TEST(FactorialTest, HandlesPositiveInput)` declares a test function.
+- `EXPECT_EQ` assertions verify expected results.
+- Tests in the same suite share the suite name (`FactorialTest`).
 
-- `EXPECT_EQ` passes if actual and expected values are equal.
-- `EXPECT_NE` passes if they are not equal.
-- On failure, GoogleTest provides detailed error messages with file location.
+### Running the Tests
+
+In your test `main()`, initialize and run all tests:
+
+```cpp
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Compile and run the test executable. The framework auto-discovers and executes all tests.
 
 ---
 
-## Organizing Tests with Fixtures
+## 3. Using Test Fixtures: Sharing Setup Across Tests
 
-If your tests share common setup or teardown code, use test fixtures.
+When you have multiple tests needing the same setup, define a *test fixture* by subclassing `testing::Test`.
 
-### Step 1: Define a Test Fixture Class
+### Fixture Definition Example
 
 ```cpp
-class FooTest : public testing::Test {
+class QueueTest : public ::testing::Test {
  protected:
   void SetUp() override {
-    // Code here runs before each test
-    value_ = 42;
+    // Set up fresh queue before each test
+    q_.Enqueue(1);
+    q_.Enqueue(2);
   }
 
-  void TearDown() override {
-    // Code here runs after each test
-  }
-
-  int value_;
+  Queue<int> q_;
 };
 ```
 
-### Step 2: Use Fixture in Tests
+### Writing Tests Using Fixtures
+
+Replace `TEST` with `TEST_F` and specify the fixture class name:
 
 ```cpp
-TEST_F(FooTest, CanAccessValue) {
-  EXPECT_EQ(value_, 42);
+TEST_F(QueueTest, IsInitiallyNonEmpty) {
+  EXPECT_EQ(q_.size(), 2);
 }
 
-TEST_F(FooTest, CanModifyValue) {
-  value_ = 100;
-  EXPECT_EQ(value_, 100);
-}
-```
-
-`TEST_F` sets up tests that use the fixture `FooTest`. Setup and teardown are automatically handled.
-
----
-
-## Using GoogleMock for Mock Objects
-
-GoogleMock allows you to mock interfaces and verify interactions.
-
-### Step 1: Define a Mock Class
-
-Suppose you have an interface:
-
-```cpp
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenDown() = 0;
-  virtual void PenUp() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
-```
-
-Define a mock class:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-```
-
-### Step 2: Set Expectations and Use Mock
-
-```cpp
-using ::testing::AtLeast;
-using ::testing::_;
-using ::testing::Return;
-
-TEST(TurtleTest, MovesForward) {
-  MockTurtle turtle;
-
-  // Expect PenDown() will be called at least once
-  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
-
-  // When GetX is called, return 100
-  ON_CALL(turtle, GetX()).WillByDefault(Return(100));
-
-  // Your code exercising turtle...
-  turtle.PenDown();
-  EXPECT_EQ(turtle.GetX(), 100);
+TEST_F(QueueTest, DequeueReturnsCorrectValues) {
+  int* item = q_.Dequeue();
+  ASSERT_NE(item, nullptr);
+  EXPECT_EQ(*item, 1);
+  delete item;
 }
 ```
 
-Key points:
-- Use `EXPECT_CALL` to specify expected calls and behavior.
-- Use `ON_CALL` to specify default behavior without requiring the call.
+### Fixture Workflow
+
+- A new fixture instance is created for each test.
+- `SetUp()` runs before each test method.
+- `TearDown()` can be overridden similarly to clean up.
 
 ---
 
-## Running Your Tests
+## 4. Assertions: Verifying Your Code
 
-Compile your tests using your build system.
+Assertions are the heart of tests. GoogleTest provides macros to check conditions.
 
-For example, with CMake, you can:
+### Common Assertions
 
-```bash
-cmake --build .
-ctest
+| Macro         | Purpose                             |
+| ------------- | --------------------------------- |
+| `EXPECT_EQ(a, b)` | Check if `a == b`                  |
+| `EXPECT_NE(a, b)` | Check if `a != b`                  |
+| `EXPECT_TRUE(cond)` | Check if condition `cond` is true |
+| `EXPECT_FALSE(cond)` | Check if condition `cond` is false|
+| `ASSERT_*`       | Like `EXPECT_*` but aborts the test when failure occurs |
+
+### Assertion Example
+
+```cpp
+EXPECT_EQ(Factorial(3), 6);
+ASSERT_NE(ptr, nullptr) << "Pointer should not be null";
+EXPECT_TRUE(value > 0);
 ```
 
-Or simply run the test executable directly:
+Use assertions to clearly document the intended expected behavior.
 
-```bash
-./my_test_executable
+---
+
+## 5. Running and Exploring Your Tests
+
+### Running Tests
+
+After building your test program, run it from the command line. It will execute all registered tests.
+
+You can use flags to run specific tests:
+
+```sh
+./my_tests --gtest_filter=FactorialTest.*
 ```
 
-You should see output indicating all tests passed or failed, with details and locations for any failures.
+To run a single test:
+
+```sh
+./my_tests --gtest_filter=FactorialTest.HandlesZeroInput
+```
+
+### Interpreting Output
+
+The framework reports:
+- Number of tests run
+- Which tests passed or failed
+- Failure messages with source file and line number
+
+Example failure output:
+
+```
+[ RUN      ] FactorialTest.HandlesZeroInput
+my_test.cc:12: Failure
+Expected equality of these values:
+  Factorial(0)
+    Which is: 0
+  1
+[  FAILED  ] FactorialTest.HandlesZeroInput (0 ms)
+```
+
+This helps you quickly locate issues.
 
 ---
 
-## Tips and Best Practices
+## 6. Best Practices & Tips
 
-- **Set expectations before the code under test exercises the mock.** GoogleMock expects this to work correctly.
-- **Use matchers wisely.** The matcher `_` means "any value" and prevents over-specifying arguments.
-- **Use sequences** to enforce call orders with `InSequence`.
-- **Suppress uninteresting call warnings** with `NiceMock` if you do not want warnings on allowable ignored calls.
-- **Use `WillOnce()` and `WillRepeatedly()`** to control return behavior.
-- **Avoid mocking methods you don’t own**. If you must, place mock classes near the source or in a dedicated testing namespace.
+- **Keep tests small and focused.** Each test should verify one behavior.
+- **Name tests descriptively.** Use clear suite and test names reflecting intent.
+- **Use fixtures when multiple tests share setup.** Avoid duplicating setup code.
+- **Prefer `EXPECT_*` to allow multiple assertions per test, but use `ASSERT_*` when continuing after failure is unsafe.**
+- **Run tests frequently during development** to catch regressions early.
+- **For complex verifications, consider matchers and parameterized tests.** Refer to the [Matchers Reference](../api-reference/gtest-core-api/assertions-reference).
 
-See the [gMock for Dummies](../guides/core-testing-workflows/mocking-and-expectations.md) and [gMock Cheat Sheet](../guides/core-testing-workflows/using-matchers-and-actions.md) for more.
-
----
-
-## Troubleshooting
-
-- **No tests run?** - Check if you defined the main test entry (`RUN_ALL_TESTS()`), and that tests are correctly registered.
-- **Compilation errors with mocks?** - Make sure all mocked methods are `virtual` and that `MOCK_METHOD` usage is syntactically correct.
-- **Test failures with unexpected calls?** - Verify that `EXPECT_CALL` matches your usage and in expected order.
-
-If you need help, run tests with the flag `--gmock_verbose=info` to get detailed mock call trace.
+<div>
+If you hit compilation or linking issues, verify your GoogleTest setup and include paths. See the [Installation Guide](../getting-started/setup-and-installation/installation-guide) for troubleshooting.
+</div>
 
 ---
 
-## Next Steps
+## 7. Troubleshooting Common Issues
 
-- Explore [Writing Effective Assertions](../guides/core-testing-workflows/writing-assertions.md) to deepen your testing skills.
-- Learn about advanced mocking with [Using Matchers and Actions](../guides/core-testing-workflows/using-matchers-and-actions.md).
-- Review the [gMock Cookbook](../guides/advanced-usage-and-optimization/using-actions-and-custom-behaviors.md) for tips on custom matchers and actions.
-
----
-
-## Additional Resources
-
-- Google's official [gMock GitHub Repository](https://github.com/google/googletest/tree/main/googlemock)
-- Detailed API reference: [GoogleMock Mocking APIs](../api-reference/gmock-mocking-apis/mock-object-definition.md)
-- Community and discussions on Google Test [Google Groups](https://groups.google.com/g/googletestframework)
+| Problem                         | Solution                           |
+| -------------------------------| ---------------------------------|
+| Tests don't run or executable missing | Ensure test files include `<gtest/gtest.h>` and that you link with gtest or gtest_main |
+| Compilation errors with `TEST` or `TEST_F` | Make sure the GoogleTest headers are correctly included and namespaces used |
+| Assertion failures | Read error messages carefully; verify expected vs actual values; isolate failures with focused tests |
+| Assertion macro does not compile | Check syntax, especially parentheses and macro arguments |
 
 ---
 
-With this foundation, you’re equipped to write robust unit tests with GoogleTest and GoogleMock. Begin with simple tests, then gradually introduce mocks and more advanced features to maintain a solid, maintainable test base for your C++ projects.
+## 8. Next Steps & Related Content
 
-Happy testing!
+- **Explore writing your first mock class and expectations with [Mocking Basics with GoogleMock](../guides/real-world-workflows/mocking-basics).**
+- **Learn to run tests with advanced options in [Running Tests](../getting-started/first-test-and-validation/running-tests).**
+- **Understand core testing concepts in [Core Concepts & Terminology](../overview/intro-core-concepts/core-concepts-terminology).**
+- **Dive into writing richer assertions in [Mastering Assertions and Matchers](../guides/real-world-workflows/assertion-best-practices).**
+
+---
+
+## References
+
+- [GoogleTest Primer (this guide)](primer.md)
+- [Writing Your First Test](../getting-started/first-test-and-validation/writing-your-first-test)
+- [Installation Guide](../getting-started/setup-and-installation/installation-guide)
+- [Assertions Reference](../api-reference/gtest-core-api/assertions-reference)
+- [Mocking Basics](../guides/real-world-workflows/mocking-basics)
+
+---
+
+Start your journey with small, practical tests and build from there. GoogleTest empowers you to write maintainable, reliable tests that improve your code quality.
+
+Happy Testing!
