--- a/concepts/core-architecture/xunit-architecture.mdx
+++ b/concepts/core-architecture/xunit-architecture.mdx
@@ -1,224 +1,199 @@
 ---
-title: "xUnit Architecture and Test Lifecycle"
-description: "Delve into the xUnit test framework as adapted by GoogleTest. Learn how test cases are defined, discovered, and orchestrated, and how test setup, teardown, and test ordering naturally fit within this model. Grasp the testing lifecycle and how it supports reliable, repeatable unit testing in large C++ projects."
+title: "xUnit Test Architecture"
+description: "Introduces the xUnit architecture as implemented in GoogleTest. Explains the structure of test cases and suites, fixtures, and the overall lifecycle—from setup to teardown and reporting. Highlights how this model drives consistency and scalability in test design."
 ---
 
-# xUnit Architecture and Test Lifecycle
+# xUnit Test Architecture
 
-GoogleTest adapts the well-known xUnit test framework architecture to C++ testing, providing a structured and reliable way to write, organize, and run unit tests. This guide explores how test cases are defined and orchestrated in GoogleTest, focusing on the lifecycle of tests, the roles of setup and teardown, test discovery mechanisms, and how test ordering is managed. You'll understand how GoogleTest ensures each test is independent, repeatable, and robust for large-scale C++ projects.
-
----
-
-## Understanding the xUnit Model in GoogleTest
-
-GoogleTest adopts the **xUnit** testing architecture, which organizes tests into hierarchical units to provide clarity, maintainability, and scalability.
-
-- **Tests:** The atomic executable verification units.
-- **Test Suites:** Collections of related tests grouped by functionality or purpose.
-- **Test Fixture Classes:** Classes that allow multiple tests to share the same setup and teardown environment.
-
-This model promotes encapsulation and clear test boundaries, empowering developers to express a variety of test scenarios cleanly.
-
-### Test Definition Patterns
-
-- **Simple Tests** use the `TEST()` macro:
-
-  ```cpp
-  TEST(TestSuiteName, TestName) {
-    // test logic and assertions
-  }
-  ```
-
-  Each test defined this way is independent and runs in isolation.
-
-- **Tests with Fixtures** use the `TEST_F()` macro, enabling shared setup:
-
-  ```cpp
-  class FooTest : public testing::Test {
-   protected:
-    void SetUp() override {
-      // shared setup logic
-    }
-
-    void TearDown() override {
-      // shared cleanup logic
-    }
-
-    // shared test data and helpers
-    int shared_value_;
-  };
-
-  TEST_F(FooTest, TestExample) {
-    EXPECT_EQ(shared_value_, 42);
-  }
-  ```
-
-  GoogleTest will create fresh fixture objects for each test to ensure isolation.
+GoogleTest implements the widely adopted xUnit testing architecture, providing a consistent, scalable, and extensible framework for organizing and running tests in C++ projects. This model structures tests into suites and cases, supports reusable fixtures, and manages the lifecycle of test execution from setup through teardown and reporting.
 
 ---
 
-## Test Lifecycle Explained
+## Core Structure of Tests
 
-### Initialization
+At its heart, GoogleTest uses three main building blocks:
 
-1. **Test Registration:** At program startup, all tests defined via `TEST()` or `TEST_F()` macros are automatically registered.
-2. **Test Runner Setup:** GoogleTest initializes its internal structures, such as the test registry and filtering criteria.
+- **Test Suites (formerly Test Cases):** Logical groups of related tests. They represent a set of tests that share a common context or purpose.
+- **Tests:** Individual test functions that execute specific verification logic.
+- **Test Fixtures:** Classes that provide a shared environment for multiple tests within the same suite, including setup and teardown routines and shared data.
 
-### Test Execution Flow
+This architecture promotes test isolation, reusability of setup code, and easier maintenance.
 
-For each test:
+### Test Suite and Test Hierarchy
 
-1. **Construction:** GoogleTest creates a fresh instance of the test fixture class (or a dummy object for `TEST()`).
-2. **Setup:** `SetUp()` is called to prepare the environment.
-3. **Test Body:** The test function runs, performing assertions and test logic.
-4. **TearDown:** The fixture's `TearDown()` method cleans resources.
-5. **Destruction:** The fixture object is deleted.
+Each test belongs to exactly one test suite. GoogleTest expects developers to organize tests into suites that mirror the structure or design of the code under test. This organization helps in understanding test reports and debugging failures.
 
-This ensures **complete isolation** between tests, eliminating cross-test state leakage.
+Tests are named individually within a suite, and their fully qualified name is formed by `<TestSuiteName>.<TestName>`.
 
-### Outcomes and Reporting
+Example:
+```cpp
+TEST(MathUtilsTest, FactorialHandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 
-- A test passes if all assertions succeed and no fatal failures occur.
-- Tests can have multiple nonfatal failures (`EXPECT_*`) without aborting immediately.
-- On failure, GoogleTest provides detailed diagnostic messages including file, line, and failure context.
-
----
-
-## Test Discovery and Registration
-
-GoogleTest automatically discovers and registers tests at compile time by virtue of the macros `TEST()` and `TEST_F()`. This means:
-
-- No manual listing of tests is needed.
-- Tests in different source files are seamlessly aggregated at runtime.
-- Registered tests are accessible for filtering and selective execution.
-
-### Filtering Tests
-
-Users can run all tests or a subset defined by name patterns using command-line flags:
-
-```shell
---gtest_filter=TestSuiteName.TestName
+TEST(MathUtilsTest, FactorialHandlesPositiveInput) {
+  EXPECT_EQ(Factorial(5), 120);
+}
 ```
 
-This facilitates targeted test runs.
+Here, `MathUtilsTest` is the test suite containing two tests.
 
----
+### Test Fixtures: Sharing Setup and Teardown
 
-## Setup and Teardown in Detail
+When several tests need common data or setup, you define a test fixture by subclassing `testing::Test`. This fixture class:
 
-### Purpose
+- Contains member variables and subroutines shared across multiple tests.
+- Provides `SetUp()` and `TearDown()` methods invoked before and after each test respectively.
+- Supports static methods `SetUpTestSuite()` and `TearDownTestSuite()` for shared one-time setup and cleanup.
 
-- **`SetUp()`** prepares the environment common to tests within the fixture.
-- **`TearDown()`** cleans up resources to prevent side effects.
-
-These are called before and after each test method within the fixture, respectively.
-
-### Best Practices
-
-- Prefer `SetUp()`/`TearDown()` over constructors and destructors for returns/throwing exceptions clarity.
-- Keep setup lightweight to maintain fast test runs.
-- Use these hooks for resource management (memory, files, connections).
-
-### Example
-
+Example:
 ```cpp
 class DatabaseTest : public testing::Test {
  protected:
   void SetUp() override {
     db.Connect();
-    db.Clear();
   }
 
   void TearDown() override {
     db.Disconnect();
   }
 
+  static void SetUpTestSuite() {
+    InitializeConnectionPool();
+  }
+
+  static void TearDownTestSuite() {
+    CleanupConnectionPool();
+  }
+
   Database db;
 };
+
+TEST_F(DatabaseTest, InsertWorks) {
+  EXPECT_TRUE(db.Insert("record1"));
+}
+
+TEST_F(DatabaseTest, DeleteWorks) {
+  EXPECT_TRUE(db.Delete("record1"));
+}
 ```
 
----
+Each test (`InsertWorks`, `DeleteWorks`) runs in a fresh `DatabaseTest` instance with proper setup and teardown.
 
-## Test Ordering and Isolation
+## Test Lifecycle Overview
 
-GoogleTest exercises tests in an **unspecified order by default** to encourage independence.
+GoogleTest manages a clear lifecycle for each test, ensuring test isolation and consistent results.
 
-- Tests must not depend on execution order.
-- Tests cannot depend on side effects of other tests.
+1. **Test Suite Setup**: Once before any tests in the suite run, `SetUpTestSuite()` is called for costly shared initialization.
+2. **Test Fixture Construction**: Before each test, a new instance of the fixture class is created.
+3. **Per-Test Setup**: `SetUp()` runs to prepare the test-specific environment.
+4. **Test Execution**: The actual test body code runs, verifying behavior with assertions.
+5. **Per-Test Teardown**: `TearDown()` cleans up after the test.
+6. **Fixture Destruction**: The test fixture instance is deleted.
+7. **Test Suite Teardown**: After all tests in the suite finish, `TearDownTestSuite()` runs to perform final cleanup.
 
-Users can manually enforce order if needed through custom runners or ordering strategies, but this is discouraged.
+This lifecycle ensures each test runs independently, preventing side effects and enabling reliable, repeatable testing.
 
----
+## Extending the Model: Parameterized and Typed Tests
 
-## Test Suite and Fixture Relationships
+To promote reusability and scalability, GoogleTest supports variations on the xUnit architecture.
 
-A test suite groups tests that share common code or purpose.
+- **Value-Parameterized Tests (`TEST_P`)** allow writing one test template that runs multiple times with different input values.
+- **Typed Tests (`TYPED_TEST`)** run the same tests across different types, useful for template-based class testing.
+- **Type-Parameterized Tests (`TYPED_TEST_P`)** provide an abstract test pattern reusable across translation units and instantiations.
 
-- Using fixtures enables sharing setup and cleanup code, as well as test utilities.
-- Each test in a fixture runs independently on a new fixture instance.
+These advanced patterns are built on the xUnit model, reusing the fixture lifecycle but expanding test coverage efficiently.
 
-This balance provides modularity without compromising test isolation.
+## Execution Flow
 
----
+During execution, GoogleTest:
 
-## Practical Tips for Using the xUnit Model in GoogleTest
+- Discovers all test suites and tests registered through macros or API.
+- Optionally filters tests to run based on user input.
+- Sequentially runs each test following the lifecycle.
+- Captures test results including successes, failures, skips, and timing.
+- Aggregates results for overall reporting.
 
-- Always start from `TEST()` macros for simple cases.
-- Introduce `TEST_F()` fixtures when sharing test environment or data structures.
-- Keep fixtures focused; don't share too many responsibilities.
-- Use `SetUp()` and `TearDown()` for repeated environment preparation.
-- Verify that tests are truly isolated by running them individually and in different orders.
-- Use test filtering to isolate failing tests quickly.
+Failures within a test are tracked as fatal or nonfatal, influencing whether the test stops or continues execution. Fatal failures abort the current test, nonfatal failures allow continued checks.
 
----
+## Reporting and Results
 
-## Troubleshooting Common Lifecycle Issues
+Each test produces a `TestResult` object with detailed information:
 
-### Issue: Tests Affect Each Other (Lack Independence)
+- Status: passed, failed, skipped
+- Execution time
+- Failure messages
+- Properties recorded during the test
 
-- Ensure no shared mutable static/global state.
-- Avoid static variables within fixtures or tests.
-- Use fresh fixtures per test.
+Test suites aggregate results of contained tests, and the top-level `UnitTest` object aggregates overall run results.
 
-### Issue: Setup Fails or Crashes
-
-- Confirm `SetUp()` doesn't throw exceptions or cause resource leaks.
-- Use assertions inside `SetUp()` to validate environment readiness.
-
-### Issue: Teardown Not Running
-
-- Ensure `TearDown()` does not trigger fatal failures that abort the test.
-- Validate resources cleaned properly.
+This hierarchical reporting aligns with the xUnit tradition, facilitating integration with CI and test dashboards.
 
 ---
 
-## Summary Diagram of the xUnit Testing Flow
+## Visual Diagram: xUnit Test Lifecycle in GoogleTest
 
 ```mermaid
-sequenceDiagram
-  participant R as Test Runner
-  participant F as Fixture/Class
-  participant T as Test Method
+flowchart TD
+  subgraph "Test Suite Lifecycle"
+    TSSetup["SetUpTestSuite()"]
+    RunTests["Run Tests"]
+    TSTeardown["TearDownTestSuite()"]
+  end
 
-  R->>F: Create fixture instance
-  F->>F: SetUp()
-  F->>T: Run Test
-  T-->>F: Results (pass/fail)
-  F->>F: TearDown()
-  F-->>R: Destroy fixture instance
-  R->>R: Repeat for next test
+  subgraph "Test Lifecycle Loop"
+    FixtureConstruct("Fixture Constructor")
+    SetUp["SetUp()"]
+    ExecuteTest["TestBody() Execution"]
+    TearDown["TearDown()"]
+    FixtureDestruct("Fixture Destructor")
+  end
+
+  TSSetup --> RunTests
+  RunTests --> FixtureConstruct
+  FixtureConstruct --> SetUp
+  SetUp --> ExecuteTest
+  ExecuteTest --> TearDown
+  TearDown --> FixtureDestruct
+  FixtureDestruct --> RunTests
+
+  RunTests -->|All Tests Run| TSTeardown
+
+  classDef lifecycle fill:#e7f3fe,stroke:#4a90e2,stroke-width:2px,color:#0b3d91;
+  class TSSetup,TSTeardown,FixtureConstruct,SetUp,ExecuteTest,TearDown,FixtureDestruct lifecycle;
+
 ```
 
 ---
 
-## See Also
+## Best Practices
 
-- [GoogleTest Primer](https://github.com/google/googletest/tree/main/docs/primer.md) for starting with simple tests
-- [Writing Your First Test](https://github.com/google/googletest/tree/main/guides/getting-started/writing-your-first-test.mdx)
-- [Core Concepts & Terminology](https://github.com/google/googletest/tree/main/overview/essentials-and-concepts/core-concepts-and-terminology.mdx) to grasp important testing vocabulary
-- [Test Discovery and Execution](https://github.com/google/googletest/tree/main/guides/essential-workflows/test-discovery-execution.mdx) for how tests are found and run
-- [Basic Mocking with GoogleMock](https://github.com/google/googletest/tree/main/guides/getting-started/basic-mocking.mdx) to integrate mocks into your test flow
+- **Use Clear Test Suites**: Group tests logically to reflect code structure.
+- **Leverage Fixtures for Shared Setup**: Avoid code duplication and inconsistencies.
+- **Isolate Tests**: Tests run on fresh fixture instances to avoid unintended dependencies.
+- **Prefer `EXPECT_` over `ASSERT_`**: To uncover multiple failures in one run, unless test continuation doesn't make sense.
+- **Use Typed and Parameterized Tests for Scaling**: Cover many inputs and types without repeating code.
+- **Name Tests Clearly**: Follow naming conventions for suite and test names for better maintainability and filtering.
 
 ---
 
-This guide focuses specifically on the xUnit architecture and lifecycle support within GoogleTest, helping you write reliable, isolated, and maintainable unit tests effectively.
+## Troubleshooting
+
+- Ensure `SetUp()` and `TearDown()` methods are correctly spelled and marked `override` to guarantee they run.
+- Avoid shared mutable static state in fixtures that might cause test interference.
+- For parameterized and typed tests, confirm registration macros are used correctly to prevent silent test omissions or runtime errors.
+- Check the test order if tests depend inadvertently on each other; GoogleTest runs tests in declaration order unless shuffled.
+
+---
+
+## Additional Resources
+
+To deepen your understanding and effectively apply the xUnit model in GoogleTest, consult these pages:
+
+- [Core Concepts & Terminology](/overview/intro-core-concepts/core-concepts-terminology)
+- [Feature Overview](/overview/architecture-features-integration/feature-overview)
+- [Test Discovery and Execution Lifecycle](/concepts/core-architecture/test-discovery-lifecycle)
+- [Typed and Parameterized Tests Guide](/concepts/advanced-testing-patterns/parameterized-tests)
+- [GoogleTest Primer](/guides/getting-started/gtest-primer)
+
+Leveraging this foundational architecture will enable you to build robust, maintainable, and scalable test suites that truly improve your code quality.
